Updated for CISC 3610

--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-Aleksandr Chamin CISC 3171 
+<h1>Aleksandr Chamin CISC 3171</h1>
+<h3> Welcome to my Github Pages for CISC 3610!</h3>
+<h3> Links for class projects : </h3>
 
+<a href="Project_One/index.html">Project 1 (Cartoon)</a><br>
+<a href="Project_Two_Animation/index.html">Project 2 (Animation)</a><br>
+<a href="Project_Three_Form/index.html">Project 3 (Form) </a> <br>
+<a href="DataVisualization/index.html"> Project 5 (Data Visualization) </a>
+
+<h3> Links for class labs : </h3>
+<a href="Labs/Lab1/lab.html">Lab 1 (JSON Fruit Lab) </a> <br>
+<a href="Lab 2/sound.html"> Lab 2 (Audio Lab) </a> <br>
+<a href="Bootstrap Lab/index.html">Lab 3 (Bootstrap)</a> <br>
+<a href="Resume/index.html"> Lab 4 (Resume Lab) </a> <br>
