Added last two projects, PWA is not really finished but I'll submit it just in case.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <a href="Project_One/index.html">Project 1 (Cartoon)</a><br>
 <a href="Project_Two_Animation/index.html">Project 2 (Animation)</a><br>
 <a href="Project_Three_Form/index.html">Project 3 (Form) </a> <br>
+<a href="VideoAnimation/Animated Scene5-13-2024_16-47-54.html">Project 4 (Video Animation)</a> <br>
 <a href="DataVisualization/index.html"> Project 5 (Data Visualization) </a> <br>
 <a href="WickEditorProject/WickEditorProject4-28-2024_23-33-16.html">Project 6 (Wick Editor)</a> <br>
+<a href="PWA/index.html">Project 7 (PWA, not really finished) </a> <br>
 
 <h3> Links for class labs : </h3>
 <a href="Labs/Lab1/lab.html">Lab 1 (JSON Fruit Lab) </a> <br>
